2008-01-15 dangelo

	* win32/msi/enblend.warsetup, win32/msi/top-banner.bmp,
	win32/msi/big-banner.bmp: Created win32 installer using WarSetup 3.0

2008-01-13 dangelo

	* contrib/enfuse_droplet: Added enfuse droplets batch files by Erik
	Krause

	* win32/install.cmd: Copy all required files into the INSTALLDIR
	folder, ready for zipping and uploading.

2008-01-07 dangelo
	* include/vigra_ext/cachedfileimage.hxx,
	include/vigra_ext/stdcachedfileimage.hxx: Removed old implementations.

	* include/vigra/cachedfileimage.hxx: Use Win32 temp file functions,
	fixes enfuse bug that prevented using more than a few source images
	with enfuse.

2008-01-06 dangelo
        * src/enfuse.h: Improved performace of HardMask parameter, added
        CacheFileImage verbose output

        * src/enblend.h: Compile only 8 bit paths when DEBUG_8BIT_ONLY is
        defined. 

	* src/vigra_impex/jpeg.cxx: Set default jpeg quality to 98.

2007-12-21 dangelo

	* configure.in, src/Makefile.am: removed -g from default compilation flags

	* src/enfuse.h, src/enfuse.cc, src/enfuse.1: Implemented variance based
	local contrast criteria, works great on focus stacks. Further work is
	needed for images with alpha channel. Only calcuate criteria that are
	non-zero
	
	* include/vigra/inspectimage.hxx: Fixed a compiler warning (was not a bug)

	* include/vigra/impex.hxx: Disable automatic rescaling when saving
	images to files with different bit depth.

2007-12-05 dangelo

	* configure.in: turned some warnings into errors

2007-11-25 dangelo

	* enblend_msvc2003.sln, src/enblend_msvc2003.vcproj,
	src/enfuse_msvc2003.vcproj,
	src/vigra_impex/vigra_impex_msvc2003.vcproj: Up to date project files
	for building with MSVC 2003

	* configure.in, src/win32helpers/win32config: updated version number
	to 3.1

	* src/anneal.h, src/assemble.h, src/vigra_impex/exr.cxx,
	src/vigra_impex/png.cxx: fixes for MSVC compilation
	
	* AUTHORS, READMEWIN: small documentation updates

2007-10-31  dangelo
